--- a/ECS/ECS.vcxproj
+++ b/ECS/ECS.vcxproj
@@ -59,6 +59,7 @@
       <AdditionalIncludeDirectories>HeaderFiles;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -76,6 +77,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <MinimalRebuild>false</MinimalRebuild>
       <StringPooling>true</StringPooling>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -91,10 +93,6 @@
     <ClInclude Include="HeaderFiles\System.h" />
     <ClInclude Include="HeaderFiles\SystemManager.h" />
     <ClInclude Include="HeaderFiles\ecVector.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="SourceFiles\ECSTYPES.cpp" />
-    <ClCompile Include="SourceFiles\Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
