--- a/Assets/EngineAssets/imgui.ini
+++ b/Assets/EngineAssets/imgui.ini
@@ -21,7 +21,7 @@ ViewportPos=702,35
 ViewportId=0xD4B39271
 Size=500,617
 Collapsed=0
-DockId=0x00000004,1
+DockId=0x0000000B,1
 
 [Window][properties]
 Pos=1558,21
@@ -41,10 +41,10 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Scene##0]
-Pos=418,21
-Size=1138,705
+Pos=989,21
+Size=567,705
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x0000000C,0
 
 [Window][Dear ImGui Demo]
 Pos=0,21
@@ -54,9 +54,9 @@ DockId=0x00000002,0
 
 [Window][Scene##1]
 Pos=418,21
-Size=1138,705
+Size=569,705
 Collapsed=0
-DockId=0x00000004,1
+DockId=0x0000000B,0
 
 [Window][Open]
 Pos=0,683
@@ -68,13 +68,13 @@ DockId=0x00000008,0
 Pos=364,21
 Size=1155,705
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x0000000B,0
 
 [Window][Scene##3]
 Pos=364,21
 Size=1185,683
 Collapsed=0
-DockId=0x00000004,3
+DockId=0x0000000B,3
 
 [Window][Project]
 Pos=0,728
@@ -138,15 +138,17 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,44 Size=1920,996 Split=Y
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1920,705 Split=Y
-    DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=1920,660 Split=X Selected=0xA36AA222
-      DockNode    ID=0x0000000A Parent=0x00000007 SizeRef=1556,705 Split=X Selected=0xA36AA222
-        DockNode  ID=0x00000002 Parent=0x0000000A SizeRef=416,705 Selected=0xC15A3217
-        DockNode  ID=0x00000004 Parent=0x0000000A SizeRef=1138,705 CentralNode=1 Selected=0xA36AA222
-      DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=362,705 Split=Y
-        DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=362,445 Selected=0x87C331C7
-        DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=362,258 Selected=0xFFD74798
-    DockNode      ID=0x00000008 Parent=0x00000001 SizeRef=1920,334 Selected=0x04422C9A
-  DockNode        ID=0x00000005 Parent=0x8B93E3BD SizeRef=1920,289 Selected=0xE00EE972
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,44 Size=1920,996 Split=Y
+  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1920,705 Split=Y
+    DockNode        ID=0x00000007 Parent=0x00000001 SizeRef=1920,660 Split=X Selected=0xA36AA222
+      DockNode      ID=0x0000000A Parent=0x00000007 SizeRef=1556,705 Split=X Selected=0xA36AA222
+        DockNode    ID=0x00000002 Parent=0x0000000A SizeRef=416,705 Selected=0xC15A3217
+        DockNode    ID=0x00000004 Parent=0x0000000A SizeRef=1138,705 Split=X Selected=0xA36AA222
+          DockNode  ID=0x0000000B Parent=0x00000004 SizeRef=569,705 CentralNode=1 Selected=0xA36AA222
+          DockNode  ID=0x0000000C Parent=0x00000004 SizeRef=567,705 Selected=0xD46D92B4
+      DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=362,705 Split=Y
+        DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=362,445 Selected=0x87C331C7
+        DockNode    ID=0x00000009 Parent=0x00000003 SizeRef=362,258 Selected=0xFFD74798
+    DockNode        ID=0x00000008 Parent=0x00000001 SizeRef=1920,334 Selected=0x04422C9A
+  DockNode          ID=0x00000005 Parent=0x8B93E3BD SizeRef=1920,289 Selected=0xE00EE972
 
