--- a/AkameCore/AkameCore.vcxproj.filters
+++ b/AkameCore/AkameCore.vcxproj.filters
@@ -327,6 +327,10 @@
     <ClInclude Include="Header Files\Core\SceneEntityListSystem.h">
       <Filter>Header Files\Core</Filter>
     </ClInclude>
+    <ClInclude Include="Header Files\Assets\MeshManager.h" />
+    <ClInclude Include="Header Files\Core\Serialization\SceneSerialization.h" />
+    <ClInclude Include="Header Files\Core\Serialization\ModelExporter.h" />
+    <ClInclude Include="Header Files\Core\OS\OS_Interface.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source Files\Animation\AnimationControllerSystem.cpp">
@@ -511,5 +515,9 @@
     </ClCompile>
     <ClCompile Include="Header Files\Core\AkameCore.cpp" />
     <ClCompile Include="Source Files\Core\AkameCore.cpp" />
+    <ClCompile Include="Source Files\Assets\MeshManager.cpp" />
+    <ClCompile Include="Source Files\Core\SceneSerialization.cpp" />
+    <ClCompile Include="Source Files\Core\ModelExporter.cpp" />
+    <ClCompile Include="Source Files\Core\OS_interface.cpp" />
   </ItemGroup>
 </Project>
