started adding Material component's UI

--- a/AkameCore/AkameCore.vcxproj
+++ b/AkameCore/AkameCore.vcxproj
@@ -57,7 +57,7 @@
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>DEBUG;AK_DLL;AK_EXPORT;AK_EXPOSE_SPD_LOG;AK_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>DEBUG;AK_DLL;AK_EXPORT;AK_EXPOSE_SPD_LOG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>vendor\glfw\include;vendor\single_include\nlohmann;vendor\glad-akame-;vendor;vendor\imGui;vendor\assimp\include;..\ECS\HeaderFiles;Header Files;vendor\pugixml\src;vendor\spdlog\include;vendor\PhysX\physx\include;vendor\PhysX\physx\source\physxextensions\src;vendor\PhysX\pxshared\include;vendor\PhysX\physx\source\foundation\include;vendor\PhysX\physx\snippets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
@@ -75,7 +75,7 @@
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>NDEBUG;AK_DLL;AK_EXPORT;AK_EXPOSE_SPD_LOG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;AK_DLL;AK_EXPORT;AK_DEBUG;AK_EXPOSE_SPD_LOG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>vendor\glfw\include;vendor\single_include\nlohmann;vendor\glad-akame-;vendor;vendor\imGui;vendor\assimp\include;..\ECS\HeaderFiles;Header Files;vendor\pugixml\src;vendor\spdlog\include;vendor\PhysX\physx\include;vendor\PhysX\physx\source\physxextensions\src;vendor\PhysX\pxshared\include;vendor\PhysX\physx\source\foundation\include;vendor\PhysX\physx\snippets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -128,10 +128,11 @@
     <ClInclude Include="Header Files\Core\Input.h" />
     <ClInclude Include="Header Files\Core\Log\Log.h" />
     <ClInclude Include="Header Files\Core\OS\OS_Interface.h" />
-    <ClInclude Include="Header Files\Core\Serialization\ModelExporter.h" />
     <ClInclude Include="Header Files\Core\Reflection\ReflectionMeta.h" />
     <ClInclude Include="Header Files\Core\Reflection\ReflectionUIHandler.h" />
     <ClInclude Include="Header Files\Core\Scene.h" />
+    <ClInclude Include="Header Files\Core\SceneEntityListSystem.h" />
+    <ClInclude Include="Header Files\Core\Serialization\ModelExporter.h" />
     <ClInclude Include="Header Files\Core\Serialization\SceneSerialization.h" />
     <ClInclude Include="Header Files\Core\Window.h" />
     <ClInclude Include="Header Files\Math\EngineMath.h" />
@@ -162,12 +163,8 @@
     <ClInclude Include="Header Files\Rendering\System\TiledRenderer.h" />
     <ClInclude Include="Header Files\Rendering\Texture.h" />
     <ClInclude Include="Header Files\Scripting\BehaviourSystem.h" />
-    <ClInclude Include="Header Files\Core\SceneEntityListSystem.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Header Files\Core\AkameCore.cpp" />
-    <ClCompile Include="Source Files\Core\OS_interface.cpp" />
-    <ClCompile Include="Source Files\Core\ModelExporter.cpp" />
     <ClCompile Include="Source Files\Animation\AnimationControllerSystem.cpp" />
     <ClCompile Include="Source Files\Animation\SkeletalMeshRenderingSystem.cpp" />
     <ClCompile Include="Source Files\Animation\SkinnedRendererPipeline.cpp" />
@@ -196,6 +193,8 @@
     <ClCompile Include="Source Files\Core\Editor\SceneHierarchyWindow.cpp" />
     <ClCompile Include="Source Files\Core\Editor\ViewPortWindow.cpp" />
     <ClCompile Include="Source Files\Core\Input.cpp" />
+    <ClCompile Include="Source Files\Core\ModelExporter.cpp" />
+    <ClCompile Include="Source Files\Core\OS_interface.cpp" />
     <ClCompile Include="Source Files\Core\Reflection\ReflectionMeta.cpp" />
     <ClCompile Include="Source Files\Core\Reflection\ReflectionUIHandler.cpp" />
     <ClCompile Include="Source Files\Core\Scene.cpp" />
