--- a/Assets/EngineAssets/imgui.ini
+++ b/Assets/EngineAssets/imgui.ini
@@ -6,9 +6,9 @@ Collapsed=0
 
 [Window][SceneGraph]
 Pos=0,21
-Size=347,679
+Size=347,297
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x0000000B,1
 
 [Window][DirShadowMap]
 ViewportPos=2316,128
@@ -24,39 +24,39 @@ Collapsed=0
 DockId=0x00000004,1
 
 [Window][properties]
-Pos=1558,21
-Size=362,679
+Pos=750,21
+Size=330,476
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,21
-Size=1920,996
+Size=1080,699
 Collapsed=0
 
 [Window][Shadows:]
-Pos=1558,21
-Size=362,679
+Pos=750,21
+Size=330,476
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Scene##0]
 Pos=349,21
-Size=1207,679
+Size=399,476
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000004,1
 
 [Window][Dear ImGui Demo]
 Pos=0,21
-Size=347,679
+Size=347,297
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x0000000B,0
 
 [Window][Scene##1]
 Pos=349,21
-Size=1207,679
+Size=399,476
 Collapsed=0
-DockId=0x00000004,1
+DockId=0x00000004,0
 
 [Window][Open]
 Pos=0,683
@@ -77,8 +77,8 @@ Collapsed=0
 DockId=0x00000004,3
 
 [Window][Project]
-Pos=0,702
-Size=1920,315
+Pos=0,499
+Size=1080,221
 Collapsed=0
 DockId=0x00000005,0
 
@@ -110,6 +110,12 @@ Pos=60,60
 Size=96,52
 Collapsed=0
 
+[Window][stats]
+Pos=0,320
+Size=347,177
+Collapsed=0
+DockId=0x0000000C,0
+
 [Table][0x49F8DCEA,3]
 RefScale=15
 Column 0  Weight=1.0000
@@ -138,15 +144,17 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,44 Size=1920,996 Split=Y
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1920,679 Split=Y
-    DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=1920,660 Split=X Selected=0xA36AA222
-      DockNode    ID=0x0000000A Parent=0x00000007 SizeRef=1556,705 Split=X Selected=0xA36AA222
-        DockNode  ID=0x00000002 Parent=0x0000000A SizeRef=347,705 Selected=0xC15A3217
-        DockNode  ID=0x00000004 Parent=0x0000000A SizeRef=1207,705 CentralNode=1 Selected=0xA36AA222
-      DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=362,705 Split=Y
-        DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=362,445 Selected=0x87C331C7
-        DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=362,258 Selected=0xFFD74798
-    DockNode      ID=0x00000008 Parent=0x00000001 SizeRef=1920,334 Selected=0x04422C9A
-  DockNode        ID=0x00000005 Parent=0x8B93E3BD SizeRef=1920,315 Selected=0xE00EE972
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=112,156 Size=1080,699 Split=Y
+  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1920,679 Split=Y
+    DockNode        ID=0x00000007 Parent=0x00000001 SizeRef=1920,660 Split=X Selected=0xA36AA222
+      DockNode      ID=0x0000000A Parent=0x00000007 SizeRef=1330,705 Split=X Selected=0xA36AA222
+        DockNode    ID=0x00000002 Parent=0x0000000A SizeRef=347,705 Split=Y Selected=0xC15A3217
+          DockNode  ID=0x0000000B Parent=0x00000002 SizeRef=347,297 Selected=0xC15A3217
+          DockNode  ID=0x0000000C Parent=0x00000002 SizeRef=347,177 Selected=0x574767AA
+        DockNode    ID=0x00000004 Parent=0x0000000A SizeRef=981,705 CentralNode=1 Selected=0xA36AA222
+      DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=588,705 Split=Y
+        DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=362,445 Selected=0x87C331C7
+        DockNode    ID=0x00000009 Parent=0x00000003 SizeRef=362,258 Selected=0xFFD74798
+    DockNode        ID=0x00000008 Parent=0x00000001 SizeRef=1920,334 Selected=0x04422C9A
+  DockNode          ID=0x00000005 Parent=0x8B93E3BD SizeRef=1920,315 Selected=0xE00EE972
 
