--- a/Assets/EngineAssets/imgui.ini
+++ b/Assets/EngineAssets/imgui.ini
@@ -148,7 +148,7 @@ DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,44 Size=1920,996 Split=Y
   DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1920,782 Split=Y
     DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=1920,660 Split=X Selected=0xA36AA222
       DockNode    ID=0x0000000A Parent=0x00000007 SizeRef=1478,705 Split=X Selected=0xA36AA222
-        DockNode  ID=0x00000002 Parent=0x0000000A SizeRef=347,705 Selected=0xC15A3217
+        DockNode  ID=0x00000002 Parent=0x0000000A SizeRef=347,705 Selected=0x574767AA
         DockNode  ID=0x00000004 Parent=0x0000000A SizeRef=1129,705 CentralNode=1 Selected=0xA36AA222
       DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=440,705 Split=Y
         DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=362,445 Selected=0x87C331C7
