--- a/Assets/EngineAssets/imgui.ini
+++ b/Assets/EngineAssets/imgui.ini
@@ -6,7 +6,7 @@ Collapsed=0
 
 [Window][SceneGraph]
 Pos=0,21
-Size=347,782
+Size=276,782
 Collapsed=0
 DockId=0x00000002,1
 
@@ -24,8 +24,8 @@ Collapsed=0
 DockId=0x00000004,1
 
 [Window][properties]
-Pos=1480,21
-Size=440,782
+Pos=1329,21
+Size=591,782
 Collapsed=0
 DockId=0x00000006,1
 
@@ -35,26 +35,26 @@ Size=1920,996
 Collapsed=0
 
 [Window][Shadows:]
-Pos=1480,21
-Size=440,782
+Pos=1329,21
+Size=591,782
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Scene##0]
-Pos=349,21
-Size=1129,782
+Pos=278,21
+Size=1049,782
 Collapsed=0
 DockId=0x00000004,1
 
 [Window][Dear ImGui Demo]
 Pos=0,21
-Size=347,782
+Size=276,782
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene##1]
-Pos=349,21
-Size=1129,782
+Pos=278,21
+Size=1049,782
 Collapsed=0
 DockId=0x00000004,0
 
@@ -112,7 +112,7 @@ Collapsed=0
 
 [Window][stats]
 Pos=0,21
-Size=347,782
+Size=276,782
 Collapsed=0
 DockId=0x00000002,2
 
@@ -147,10 +147,10 @@ Column 5  Width=-1
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,44 Size=1920,996 Split=Y
   DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1920,782 Split=Y
     DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=1920,660 Split=X Selected=0xA36AA222
-      DockNode    ID=0x0000000A Parent=0x00000007 SizeRef=1478,705 Split=X Selected=0xA36AA222
-        DockNode  ID=0x00000002 Parent=0x0000000A SizeRef=347,705 Selected=0x574767AA
-        DockNode  ID=0x00000004 Parent=0x0000000A SizeRef=1129,705 CentralNode=1 Selected=0xA36AA222
-      DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=440,705 Split=Y
+      DockNode    ID=0x0000000A Parent=0x00000007 SizeRef=1327,705 Split=X Selected=0xA36AA222
+        DockNode  ID=0x00000002 Parent=0x0000000A SizeRef=276,705 Selected=0xC15A3217
+        DockNode  ID=0x00000004 Parent=0x0000000A SizeRef=1049,705 CentralNode=1 Selected=0xA36AA222
+      DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=591,705 Split=Y
         DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=362,445 Selected=0x87C331C7
         DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=362,258 Selected=0xFFD74798
     DockNode      ID=0x00000008 Parent=0x00000001 SizeRef=1920,334 Selected=0x04422C9A
