--- a/Assets/EngineAssets/imgui.ini
+++ b/Assets/EngineAssets/imgui.ini
@@ -1,12 +1,12 @@
 [Window][Debug##Default]
-ViewportPos=1720,514
+ViewportPos=1322,945
 ViewportId=0x9F5F46A1
 Size=500,617
 Collapsed=0
 
 [Window][SceneGraph]
 Pos=0,21
-Size=222,412
+Size=420,728
 Collapsed=0
 DockId=0x00000002,1
 
@@ -24,37 +24,37 @@ Collapsed=0
 DockId=0x00000004,1
 
 [Window][properties]
-Pos=712,21
-Size=368,412
+Pos=1377,21
+Size=543,728
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,21
-Size=1080,699
+Size=1920,996
 Collapsed=0
 
 [Window][Shadows:]
-Pos=712,21
-Size=368,412
+Pos=1377,21
+Size=543,728
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Scene##0]
-Pos=224,21
-Size=486,412
+Pos=422,21
+Size=953,728
 Collapsed=0
 DockId=0x00000004,1
 
 [Window][Dear ImGui Demo]
 Pos=0,21
-Size=222,412
+Size=420,728
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene##1]
-Pos=224,21
-Size=486,412
+Pos=422,21
+Size=953,728
 Collapsed=0
 DockId=0x00000004,0
 
@@ -65,10 +65,10 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Scene##2]
-Pos=364,21
-Size=1155,705
+Pos=422,21
+Size=214,569
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000004,2
 
 [Window][Scene##3]
 Pos=364,21
@@ -77,8 +77,8 @@ Collapsed=0
 DockId=0x00000004,3
 
 [Window][Project]
-Pos=0,435
-Size=1080,285
+Pos=0,751
+Size=1920,266
 Collapsed=0
 DockId=0x00000005,0
 
@@ -112,9 +112,14 @@ Collapsed=0
 
 [Window][stats]
 Pos=0,21
-Size=222,412
+Size=420,728
 Collapsed=0
 DockId=0x00000002,2
+
+[Window][ProjectGenerator]
+Pos=169,133
+Size=360,250
+Collapsed=0
 
 [Table][0x49F8DCEA,3]
 RefScale=15
@@ -144,15 +149,15 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=164,208 Size=1080,699 Split=Y
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1920,587 Split=Y
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,44 Size=1920,996 Split=Y
+  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1920,728 Split=Y
     DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=1920,660 Split=X Selected=0xA36AA222
-      DockNode    ID=0x0000000A Parent=0x00000007 SizeRef=1264,705 Split=X Selected=0xA36AA222
-        DockNode  ID=0x00000002 Parent=0x0000000A SizeRef=222,705 Selected=0x574767AA
-        DockNode  ID=0x00000004 Parent=0x0000000A SizeRef=1040,705 CentralNode=1 Selected=0xA36AA222
-      DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=654,705 Split=Y
+      DockNode    ID=0x0000000A Parent=0x00000007 SizeRef=1375,705 Split=X Selected=0xA36AA222
+        DockNode  ID=0x00000002 Parent=0x0000000A SizeRef=420,705 Selected=0xC15A3217
+        DockNode  ID=0x00000004 Parent=0x0000000A SizeRef=953,705 CentralNode=1 Selected=0xA36AA222
+      DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=543,705 Split=Y
         DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=362,445 Selected=0x87C331C7
         DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=362,258 Selected=0xFFD74798
     DockNode      ID=0x00000008 Parent=0x00000001 SizeRef=1920,334 Selected=0x04422C9A
-  DockNode        ID=0x00000005 Parent=0x8B93E3BD SizeRef=1920,407 Selected=0xE00EE972
+  DockNode        ID=0x00000005 Parent=0x8B93E3BD SizeRef=1920,266 Selected=0xE00EE972
 
