--- a/AkameCore/AkameCore.vcxproj
+++ b/AkameCore/AkameCore.vcxproj
@@ -106,6 +106,7 @@
     <ClInclude Include="Header Files\Components\Animation\SkeletalMesh.h" />
     <ClInclude Include="Header Files\Components\Behaviour\Behaviour.h" />
     <ClInclude Include="Header Files\Components\Behaviour\BehaviourComponent.h" />
+    <ClInclude Include="Header Files\Components\Behaviour\ScriptComponent.h" />
     <ClInclude Include="Header Files\Components\Components.h" />
     <ClInclude Include="Header Files\Components\EntityDescriptor.h" />
     <ClInclude Include="Header Files\Components\Lighting\Lights.h" />
@@ -120,6 +121,7 @@
     <ClInclude Include="Header Files\Core\Editor\EditorUI.h" />
     <ClInclude Include="Header Files\Core\Editor\EntityDescriptionSystem.h" />
     <ClInclude Include="Header Files\Core\Editor\ImGuiUtils.h" />
+    <ClInclude Include="Header Files\Core\Editor\ProjectGenerator.h" />
     <ClInclude Include="Header Files\Core\Editor\PropertiesWindow\InspectorWindow.h" />
     <ClInclude Include="Header Files\Core\Editor\SceneHierarchyWindow\SceneHierarchyWindow.h" />
     <ClInclude Include="Header Files\Core\Editor\SettingsWindow\LightsAndShadows.h" />
@@ -132,6 +134,7 @@
     <ClInclude Include="Header Files\Core\Reflection\ReflectionUIHandler.h" />
     <ClInclude Include="Header Files\Core\Scene.h" />
     <ClInclude Include="Header Files\Core\SceneEntityListSystem.h" />
+    <ClInclude Include="Header Files\Core\ScriptExporter.h" />
     <ClInclude Include="Header Files\Core\Serialization\ModelExporter.h" />
     <ClInclude Include="Header Files\Core\Serialization\SceneSerialization.h" />
     <ClInclude Include="Header Files\Core\Window.h" />
@@ -166,9 +169,14 @@
     <ClInclude Include="Header Files\Rendering\System\TiledRenderer.h" />
     <ClInclude Include="Header Files\Rendering\Texture.h" />
     <ClInclude Include="Header Files\Scripting\BehaviourSystem.h" />
+    <ClInclude Include="Header Files\Scripting\ScriptableSystem.h" />
     <ClInclude Include="Header Files\Utilities\joined_vector.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source Files\Scripting\ScriptableSystem.cpp" />
+    <ClCompile Include="Source Files\Components\ScriptComponent.cpp" />
+    <ClCompile Include="Source Files\Core\ScriptExporter.cpp" />
+    <ClCompile Include="Source Files\Core\Editor\ProjectGenerator.cpp" />
     <ClCompile Include="Source Files\Math\Octree.cpp" />
     <ClCompile Include="Source Files\Animation\AnimationControllerSystem.cpp" />
     <ClCompile Include="Source Files\Animation\SkeletalMeshRenderingSystem.cpp" />
