--- a/Assets/EngineAssets/imgui.ini
+++ b/Assets/EngineAssets/imgui.ini
@@ -156,7 +156,7 @@ DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,44 Size=1920,996 Split=Y
         DockNode  ID=0x00000002 Parent=0x0000000A SizeRef=420,705 Selected=0x574767AA
         DockNode  ID=0x00000004 Parent=0x0000000A SizeRef=953,705 CentralNode=1 Selected=0xA36AA222
       DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=543,705 Split=Y
-        DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=362,445 Selected=0x87C331C7
+        DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=362,445 Selected=0x592D4EBB
         DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=362,258 Selected=0xFFD74798
     DockNode      ID=0x00000008 Parent=0x00000001 SizeRef=1920,334 Selected=0x04422C9A
   DockNode        ID=0x00000005 Parent=0x8B93E3BD SizeRef=1920,266 Selected=0xE00EE972
